<resources>
    <string name="app_name">SkyScanned</string>
    <string name="dep">Departure</string>
    <string name="arr">Arrival</string>
    <string name="info">Flight Information</string>
    <string name="flight_info">Flight Number:</string>
    <string name="flight_no">SF2024</string>
    <string name="time">Time</string>
    <string name="dep_name">ABZ</string>
    <string name="arr_name">LHR</string>
    <string name="airport">Airport</string>
    <string name="dep_time">07:55</string>
    <string name="arr_time">09:25</string>
</resources>