<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-160dp"
        tools:layout_editor_absoluteY="16dp">

        <View
            android:id="@+id/view"
            android:layout_width="382dp"
            android:layout_height="867dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/bpkSkyBlue"
            android:padding="210dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />


        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="837dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/whitevertical" />


            <net.skyscanner.backpack.card.BpkCardView
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cornerStyle="large"
                app:elevationLevel="focused">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="3"
                    android:rowCount="3">

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/info" />


                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading4"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="start"
                        android:text="@string/flight_info" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading3"
                        android:layout_width="225dp"
                        android:layout_height="35dp"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="end"
                        android:text="@string/flight_no" />
                </GridLayout>


            </net.skyscanner.backpack.card.BpkCardView>

            <net.skyscanner.backpack.card.BpkCardView
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cornerStyle="large"
                app:elevationLevel="focused">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="3">

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading3"
                        android:layout_width="225dp"
                        android:layout_height="35dp"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="end"
                        android:text="@string/dep_name" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/dep" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading4"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="start"
                        android:text="@string/airport" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading4"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_row="2"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="start"
                        android:text="@string/time" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading3"
                        android:layout_width="225dp"
                        android:layout_height="35dp"
                        android:layout_row="2"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="end"
                        android:text="@string/dep_time" />

                </GridLayout>

            </net.skyscanner.backpack.card.BpkCardView>

            <net.skyscanner.backpack.card.BpkCardView
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cornerStyle="large"
                app:elevationLevel="focused">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="3">

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/arr" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading4"
                        android:layout_width="225dp"
                        android:layout_height="35dp"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="end"
                        android:text="@string/arr_name" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading3"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="start"
                        android:text="@string/airport" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading4"
                        android:layout_width="225dp"
                        android:layout_height="35dp"
                        android:layout_row="2"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="end"
                        android:text="@string/arr_time" />

                    <net.skyscanner.backpack.text.BpkText
                        style="@style/bpkTextHeading3"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_row="2"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="start"
                        android:text="@string/time" />

                </GridLayout>

            </net.skyscanner.backpack.card.BpkCardView>

            <net.skyscanner.backpack.card.BpkCardView
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cornerStyle="large"
                app:elevationLevel="focused">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/qrcode" />
                </LinearLayout>
            </net.skyscanner.backpack.card.BpkCardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>